--- a/index.html
+++ b/index.html
@@ -1,27 +1,27 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <title>Пробег автомобиля</title>
 
 <style>
 :root {
-  --card-bg: rgba(255,255,255,0.2);
+  --card-bg: rgba(255, 255, 255, 0.2);
   --text: #ffffff;
-  --btn-bg: rgba(255,255,255,0.4);
+  --btn-bg: rgba(255, 255, 255, 0.4);
   --modal-bg: #ffffff;
   --modal-text: #000000;
   --input-bg: #f2f2f2;
 }
 
 body.dark {
-  --card-bg: rgba(0,0,0,0.65);
-  --text: #f1f1f1;
-  --btn-bg: rgba(0,0,0,0.55);
-  --modal-bg: #121212;
-  --modal-text: #f1f1f1;
-  --input-bg: #1e1e1e;
+  --card-bg: rgba(0, 0, 0, 0.6);
+  --text: #f4f4f4;
+  --btn-bg: rgba(0, 0, 0, 0.55);
+  --modal-bg: #111;
+  --modal-text: #fff;
+  --input-bg: #222;
 }
 
 body {
@@ -37,7 +37,7 @@ body {
 
 .top-bar {
   position: fixed;
-  top: 0;
+  top: 0; left: 0;
   width: 100%;
   height: 64px;
   display: flex;
@@ -48,13 +48,13 @@ body {
   backdrop-filter: blur(10px);
   z-index: 10;
 }
-body.dark .top-bar { background: rgba(0,0,0,0.35); }
+body.dark .top-bar { background: rgba(0,0,0,0.4); }
 
 .top-btn {
   padding: 8px 14px;
   border-radius: 10px;
-  background: var(--btn-bg);
   border: none;
+  background: var(--btn-bg);
   color: var(--text);
   cursor: pointer;
 }
@@ -71,7 +71,7 @@ body.dark .top-bar { background: rgba(0,0,0,0.35); }
 input {
   width: 100%;
   padding: 12px;
-  margin-bottom: 10px;
+  margin-bottom: 12px;
   border-radius: 8px;
   border: none;
   background: var(--input-bg);
@@ -86,24 +86,21 @@ button.main {
   background: linear-gradient(135deg,#6ba8ff,#005fcc);
   color: #fff;
   cursor: pointer;
+  margin-top: 5px;
 }
-
 button.danger {
-  margin-top: 10px;
   width: 100%;
   padding: 10px;
   border-radius: 10px;
   border: none;
   background: linear-gradient(135deg,#ff6b6b,#c40000);
-  color: #fff;
+  color: white;
   cursor: pointer;
+  margin-top: 10px;
 }
 
-.history {
-  margin-top: 15px;
-  text-align: left;
-  font-size: 14px;
-}
+.history { text-align: left; margin-top: 20px; }
+.history li { margin: 4px 0; }
 
 .overlay {
   position: fixed;
@@ -124,24 +121,12 @@ button.danger {
   border-radius: 14px;
   position: relative;
 }
-
 .close {
   position: absolute;
-  top: 8px;
   right: 12px;
+  top: 8px;
   cursor: pointer;
   font-size: 22px;
-}
-
-.project-info {
-  position: fixed;
-  bottom: 12px;
-  left: 12px;
-  font-size: 12px;
-  color: var(--text);
-  background: rgba(0,0,0,0.45);
-  padding: 8px 10px;
-  border-radius: 12px;
 }
 </style>
 </head>
@@ -158,15 +143,15 @@ button.danger {
 <div class="card">
   <p id="loginInfo">Войдите, чтобы сохранять и просматривать пробег автомобиля</p>
 
-  <p class="hidden" id="userInfo">Вы вошли: <b id="userEmail"></b></p>
+  <p id="userInfo" class="hidden">Вы вошли: <b id="userEmail"></b></p>
 
   <div id="authContent" class="hidden">
     <form id="mileageForm">
-      <input type="number" id="mileage" placeholder="Пробег в км" required>
+      <input type="number" id="mileage" placeholder="Пробег в км" required />
       <button class="main">Сохранить</button>
     </form>
 
-    <div class="history hidden" id="history">
+    <div class="history hidden" id="historyBlock">
       <h4>Последние 5 записей</h4>
       <ul id="historyList"></ul>
       <button class="danger" id="clearBtn">Очистить данные</button>
@@ -174,42 +159,58 @@ button.danger {
   </div>
 </div>
 
+<!-- 🔐 МОДАЛ ОКНО ВХОДА -->
+<div class="overlay" id="loginModal">
+  <div class="modal">
+    <span class="close" id="closeLogin">×</span>
+    <h3>Вход</h3>
+    <input id="loginEmail" placeholder="Email" />
+    <input id="loginPass" type="password" placeholder="Пароль" />
+    <button class="main" id="loginSubmit">Войти</button>
+  </div>
+</div>
+
+<!-- 🆕 МОДАЛ ОКНО РЕГИСТРАЦИИ -->
+<div class="overlay" id="registerModal">
+  <div class="modal">
+    <span class="close" id="closeRegister">×</span>
+    <h3>Регистрация</h3>
+    <input id="regEmail" placeholder="Email" />
+    <input id="regPass" type="password" placeholder="Пароль" />
+    <button class="main" id="regSubmit">Создать</button>
+  </div>
+</div>
+
 <script type="module">
-/* ===== DOM ===== */
-const loginBtn = document.getElementById("loginBtn");
-const registerBtn = document.getElementById("registerBtn");
-const logoutBtn = document.getElementById("logoutBtn");
-const themeBtn = document.getElementById("themeBtn");
-
-const loginInfo = document.getElementById("loginInfo");
-const userInfo = document.getElementById("userInfo");
-const userEmail = document.getElementById("userEmail");
-
-const authContent = document.getElementById("authContent");
-const mileageForm = document.getElementById("mileageForm");
-const mileageInput = document.getElementById("mileage");
-
-const historyBlock = document.getElementById("history");
-const historyList = document.getElementById("historyList");
-const clearBtn = document.getElementById("clearBtn");
-
-/* ===== THEME ===== */
+/* ------------------ ТЕМА ------------------ */
 function applyTheme(dark) {
   document.body.classList.toggle("dark", dark);
   themeBtn.textContent = dark ? "☀️" : "🌙";
   localStorage.theme = dark ? "dark" : "light";
 }
 applyTheme(localStorage.theme === "dark");
-themeBtn.onclick = () =>
-  applyTheme(!document.body.classList.contains("dark"));
+themeBtn.onclick = () => applyTheme(!document.body.classList.contains("dark"));
 
-/* ===== FIREBASE ===== */
+/* ------------------ FIREBASE ------------------ */
 import { initializeApp } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-app.js";
 import {
-  getAuth, signInWithEmailAndPassword, createUserWithEmailAndPassword, signOut, onAuthStateChanged
+  getAuth,
+  signInWithEmailAndPassword,
+  createUserWithEmailAndPassword,
+  signOut,
+  onAuthStateChanged
 } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-auth.js";
 import {
-  getFirestore, collection, addDoc, query, where, orderBy, limit, getDocs, deleteDoc, doc
+  getFirestore,
+  collection,
+  addDoc,
+  query,
+  where,
+  orderBy,
+  limit,
+  getDocs,
+  deleteDoc,
+  doc
 } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-firestore.js";
 
 const app = initializeApp({
@@ -217,37 +218,90 @@ const app = initializeApp({
   authDomain: "focus3-df69e.firebaseapp.com",
   projectId: "focus3-df69e"
 });
-
 const auth = getAuth(app);
 const db = getFirestore(app);
 
-/* ===== AUTH ===== */
+/* ------------------ DOM ------------------ */
+const loginBtn = document.getElementById("loginBtn");
+const registerBtn = document.getElementById("registerBtn");
+const logoutBtn = document.getElementById("logoutBtn");
+const themeBtn = document.getElementById("themeBtn");
+
+const loginModal = document.getElementById("loginModal");
+const registerModal = document.getElementById("registerModal");
+const closeLogin = document.getElementById("closeLogin");
+const closeRegister = document.getElementById("closeRegister");
+
+const loginSubmit = document.getElementById("loginSubmit");
+const regSubmit = document.getElementById("regSubmit");
+
+/* ------------------ UI ------------------ */
+const loginInfo = document.getElementById("loginInfo");
+const userInfo = document.getElementById("userInfo");
+const userEmail = document.getElementById("userEmail");
+const authContent = document.getElementById("authContent");
+
+const mileageForm = document.getElementById("mileageForm");
+const mileageInput = document.getElementById("mileage");
+
+const historyBlock = document.getElementById("historyBlock");
+const historyList = document.getElementById("historyList");
+const clearBtn = document.getElementById("clearBtn");
+
+/* ------------------ АВТОРИЗАЦИЯ ------------------ */
 loginBtn.onclick = () => loginModal.classList.add("show");
 registerBtn.onclick = () => registerModal.classList.add("show");
+closeLogin.onclick = () => loginModal.classList.remove("show");
+closeRegister.onclick = () => registerModal.classList.remove("show");
+
+loginSubmit.onclick = async () => {
+  try {
+    await signInWithEmailAndPassword(auth, loginEmail.value, loginPass.value);
+    loginModal.classList.remove("show");
+  } catch (e) {
+    alert("Ошибка входа: " + e.message);
+  }
+};
+
+regSubmit.onclick = async () => {
+  try {
+    await createUserWithEmailAndPassword(auth, regEmail.value, regPass.value);
+    registerModal.classList.remove("show");
+  } catch (e) {
+    alert("Ошибка регистрации: " + e.message);
+  }
+};
+
 logoutBtn.onclick = () => signOut(auth);
 
+/* ------------------ РЕНДЕР СТАТУСА ------------------ */
 onAuthStateChanged(auth, async user => {
   if (user) {
-    userEmail.textContent = user.email;
-    loginInfo.classList.add("hidden");
-    userInfo.classList.remove("hidden");
-    authContent.classList.remove("hidden");
     loginBtn.classList.add("hidden");
     registerBtn.classList.add("hidden");
     logoutBtn.classList.remove("hidden");
-    await loadHistory(user.uid);
+
+    loginInfo.classList.add("hidden");
+    userInfo.classList.remove("hidden");
+    userEmail.textContent = user.email;
+
+    authContent.classList.remove("hidden");
+
+    loadHistory(user.uid);
   } else {
-    loginInfo.classList.remove("hidden");
-    userInfo.classList.add("hidden");
-    authContent.classList.add("hidden");
-    historyBlock.classList.add("hidden");
     loginBtn.classList.remove("hidden");
     registerBtn.classList.remove("hidden");
     logoutBtn.classList.add("hidden");
+
+    loginInfo.classList.remove("hidden");
+    userInfo.classList.add("hidden");
+    authContent.classList.add("hidden");
+
+    historyBlock.classList.add("hidden");
   }
 });
 
-/* ===== SAVE MILEAGE + MICROservice ===== */
+/* ------------------ СОХРАНЕНИЕ ПРОБЕГА ------------------ */
 mileageForm.onsubmit = async e => {
   e.preventDefault();
   const user = auth.currentUser;
@@ -259,7 +313,7 @@ mileageForm.onsubmit = async e => {
     date: new Date().toISOString()
   });
 
-  /* ⬇️⬇️⬇️ НОВОЕ: отправка в микросервис */
+  // 🔗 Отправка в микросервис
   fetch("http://localhost:3000/mileage", {
     method: "POST",
     headers: { "Content-Type": "application/json" },
@@ -270,74 +324,48 @@ mileageForm.onsubmit = async e => {
       date: new Date().toISOString()
     })
   })
-  .then(res => res.json())
-  .then(data => {
-    console.log("Ответ микросервиса:", data);
-    alert(data.recommendation || "Данные отправлены в сервис!");
-  })
-  .catch(err => console.error("Ошибка микросервиса:", err));
-  /* ⬆️⬆️⬆️ */
+  .then(r => r.json())
+  .then(d => alert(d.recommendation || "Данные отправлены"))
+  .catch(err => console.log("Ошибка отправки:", err));
 
   mileageInput.value = "";
-  await loadHistory(user.uid);
+  loadHistory(user.uid);
 };
 
-/* ===== LOAD HISTORY ===== */
+/* ------------------ ИСТОРИЯ ------------------ */
 async function loadHistory(uid) {
   historyList.innerHTML = "";
-
   const q = query(
     collection(db, "mileages"),
     where("uid", "==", uid),
     orderBy("date", "desc"),
     limit(5)
   );
+  const res = await getDocs(q);
 
-  const snap = await getDocs(q);
+  if (res.empty) return historyBlock.classList.add("hidden");
 
-  if (snap.empty) return historyBlock.classList.add("hidden");
-  snap.forEach(doc => {
-    const d = doc.data();
+  res.forEach(d => {
+    const data = d.data();
     const li = document.createElement("li");
-    li.textContent = `${d.mileage} км — ${new Date(d.date).toLocaleDateString()}`;
+    li.textContent = `${data.mileage} км — ${new Date(data.date).toLocaleDateString()}`;
     historyList.appendChild(li);
   });
 
   historyBlock.classList.remove("hidden");
 }
 
-/* ===== CLEAR DATA ===== */
+/* ------------------ ОЧИСТИТЬ ------------------ */
 clearBtn.onclick = async () => {
   if (!confirm("Удалить все записи?")) return;
   const uid = auth.currentUser.uid;
   const q = query(collection(db, "mileages"), where("uid", "==", uid));
-  const snap = await getDocs(q);
-  for (const d of snap.docs) await deleteDoc(doc(db, "mileages", d.id));
+  const res = await getDocs(q);
+
+  for (const d of res.docs) await deleteDoc(doc(db, "mileages", d.id));
+
   historyBlock.classList.add("hidden");
 };
 </script>
-
-<!-- LOGIN MODAL -->
-<div class="overlay" id="loginModal">
-  <div class="modal">
-    <span class="close" id="closeLogin">×</span>
-    <h3>Вход</h3>
-    <input id="loginEmail" placeholder="Email">
-    <input id="loginPass" type="password" placeholder="Пароль">
-    <button class="main" id="loginSubmit" onclick="signInWithEmailAndPassword(auth, loginEmail.value, loginPass.value); loginModal.classList.remove('show')">Войти</button>
-  </div>
-</div>
-
-<!-- REGISTER MODAL -->
-<div class="overlay" id="registerModal">
-  <div class="modal">
-    <span class="close" id="closeRegister">×</span>
-    <h3>Регистрация</h3>
-    <input id="regEmail" placeholder="Email">
-    <input id="regPass" type="password" placeholder="Пароль">
-    <button class="main" id="regSubmit" onclick="createUserWithEmailAndPassword(auth, regEmail.value, regPass.value); registerModal.classList.remove('show')">Создать</button>
-  </div>
-</div>
-
 </body>
 </html>
