--- a/index.html
+++ b/index.html
@@ -6,271 +6,314 @@
 <title>Пробег автомобиля</title>
 
 <style>
-    body {
-        margin: 0; padding: 0;
-        font-family: "Segoe UI", sans-serif;
-        background-image: url("car.jpg");
-        background-size: cover;
-        background-position: center;
-        background-repeat: no-repeat;
-        transition: 0.3s;
-    }
-    body.dark {
-        background-color: #111;
-        background-blend-mode: multiply;
-        color: #fff;
-    }
-    .top-bar {
-        display: flex;
-        gap: 10px;
-        justify-content: center;
-        padding: 20px;
-        background: rgba(255,255,255,0.12);
-        backdrop-filter: blur(10px);
-    }
-    .btn {
-        padding: 10px 18px;
-        border-radius: 10px;
-        border: none;
-        cursor: pointer;
-        background: rgba(255,255,255,0.28);
-        color: #fff;font-weight:600;
-    }
-    .btn.dark {
-        background: #222;color:#f8f8f8;
-    }
-    .panel {
-        max-width: 450px;
-        margin: 50px auto;
-        background: rgba(0,0,0,0.35);
-        padding: 25px;
-        border-radius: 20px;
-        backdrop-filter: blur(10px);
-        color: #fff;
-        text-align: center;
-    }
-    input {
-        width:100%;padding:10px;border-radius:8px;
-        border:none;margin-bottom:15px;font-size:16px;
-    }
-    .modal {
-        position: fixed; inset: 0;
-        display: none; justify-content:center; align-items:center;
-        background: rgba(0,0,0,0.65);
-    }
-    .modal.show { display:flex }
-    .modal-content {
-        background: #fff;
-        padding: 25px;
-        border-radius: 14px;
-        width: 320px;
-        text-align: center;
-    }
-    body.dark .modal-content{
-        background:#222;color:white;
-    }
-    .close {
-        position:absolute; right:20px; top:20px; cursor:pointer;
-        font-size:22px;
-    }
+/* ===== Основные стили ===== */
+body {
+  margin: 0;
+  font-family: "Segoe UI", Arial, sans-serif;
+  background: url("car.jpg") center/cover no-repeat fixed;
+  color: #fff;
+  transition: 0.3s;
+  padding-top: 100px;
+}
 
-    .history-box {
-        font-size:16px; text-align:left; margin-top:15px;
-    }
+body.dark {
+  background-color: #0e0e0e;
+  background-blend-mode: multiply;
+}
+
+/* ===== Верхняя панель ===== */
+.top-bar {
+  position: fixed;
+  top: 0; left: 0;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+  padding: 14px;
+  background: rgba(0,0,0,0.3);
+  backdrop-filter: blur(10px);
+  z-index: 10;
+}
+
+.btn {
+  padding: 8px 16px;
+  border: none;
+  border-radius: 8px;
+  background: rgba(255,255,255,0.25);
+  color: #fff;
+  cursor: pointer;
+  font-size: 15px;
+}
+.btn:hover { background: rgba(255,255,255,0.4); }
+
+/* ===== Карточка ===== */
+.card {
+  max-width: 450px;
+  margin: 0 auto;
+  background: rgba(0,0,0,0.55);
+  padding: 25px;
+  text-align: center;
+  border-radius: 16px;
+  backdrop-filter: blur(10px);
+}
+
+input {
+  width: 100%;
+  padding: 12px;
+  border-radius: 8px;
+  border: none;
+  margin-bottom: 10px;
+  font-size: 16px;
+}
+button.main {
+  width: 100%;
+  padding: 12px;
+  border: none;
+  border-radius: 8px;
+  background: linear-gradient(135deg,#6ba8ff,#005fcc);
+  font-size: 17px;
+  color: white;
+  cursor: pointer;
+  font-weight: bold;
+}
+button.main:disabled {
+  background: #666;
+  cursor: not-allowed;
+}
+
+/* ===== История ===== */
+.history {
+  text-align: left;
+  padding: 10px;
+  margin-top: 10px;
+  background: rgba(255,255,255,0.1);
+  border-radius: 10px;
+}
+
+/* ===== Модалки ===== */
+.modal {
+  position: fixed;
+  inset: 0;
+  display: none;
+  justify-content: center;
+  align-items: center;
+  background: rgba(0,0,0,.6);
+}
+.modal.show { display: flex; }
+
+.modal-content {
+  background: #fff;
+  padding: 25px;
+  width: 320px;
+  border-radius: 12px;
+  color: #000;
+  text-align: center;
+  position: relative;
+}
+
+body.dark .modal-content {
+  background: #222;
+  color: #fff;
+}
+
+.close {
+  position: absolute;
+  font-size: 24px;
+  top: 8px; right: 14px;
+  cursor: pointer;
+}
+
 </style>
-
 </head>
 <body>
 
+<!-- ===== Верхняя панель ===== -->
 <div class="top-bar">
-    <button class="btn" id="loginBtn">Войти</button>
-    <button class="btn" id="regBtn">Создать</button>
-    <button class="btn" id="themeBtn">🌙</button>
+  <button class="btn" id="loginBtn">Войти</button>
+  <button class="btn" id="regBtn">Создать</button>
+  <button class="btn" id="logoutBtn" style="display:none;">Выйти</button>
+  <button class="btn" id="themeBtn">🌙</button>
 </div>
 
-<div class="panel">
-    <div id="userInfo">Войдите, чтобы сохранять данные</div>
+<!-- ===== Главная карточка ===== -->
+<div class="card">
+  <div id="statusText">Войдите, чтобы сохранять данные</div><br>
 
-    <input type="number" id="mileage" placeholder="Пробег в км" disabled>
-    <button class="btn" id="saveMileage" disabled>Сохранить</button>
+  <input type="number" id="mileage" placeholder="Пробег в км" disabled>
+  <button class="main" id="saveMileage" type="button" disabled>Сохранить</button>
 
-    <button class="btn" id="logoutBtn" style="display:none;margin-top:10px;">Выйти</button>
-
-    <div class="history-box" id="history"></div>
+  <div id="history" class="history" style="display:none;"></div>
 </div>
 
-
-<!-- Логин -->
+<!-- ===== Модалка входа ===== -->
 <div class="modal" id="loginModal">
-    <div class="modal-content">
-        <span class="close" data-close="loginModal">×</span>
-        <h3>Вход</h3>
-        <input type="email" id="loginEmail" placeholder="Email">
-        <input type="password" id="loginPass" placeholder="Пароль">
-        <button class="btn" id="loginSubmit">Войти</button>
-    </div>
+  <div class="modal-content">
+    <span class="close" data-close="loginModal">×</span>
+    <h3>Вход</h3>
+    <input id="loginEmail" type="email" placeholder="Email">
+    <input id="loginPass" type="password" placeholder="Пароль">
+    <button class="main" id="loginSubmit" type="button">Войти</button>
+  </div>
 </div>
 
-<!-- Регистрация -->
+<!-- ===== Модалка регистрации ===== -->
 <div class="modal" id="regModal">
-    <div class="modal-content">
-        <span class="close" data-close="regModal">×</span>
-        <h3>Создание аккаунта</h3>
-        <input type="email" id="regEmail" placeholder="Email">
-        <input type="password" id="regPass" placeholder="Пароль">
-        <button class="btn" id="regSubmit">Создать</button>
-    </div>
+  <div class="modal-content">
+    <span class="close" data-close="regModal">×</span>
+    <h3>Регистрация</h3>
+    <input id="regEmail" type="email" placeholder="Email">
+    <input id="regPass" type="password" placeholder="Пароль">
+    <button class="main" id="regSubmit" type="button">Создать</button>
+  </div>
 </div>
 
+<!-- ========== SCRIPT ========== -->
 <script type="module">
-/*--------------------------------------------------
-   🔥 Firebase
---------------------------------------------------*/
+/* ===== Тема ===== */
+const themeBtn = document.getElementById("themeBtn");
+function applyTheme(){
+  const dark = localStorage.theme === "dark";
+  document.body.classList.toggle("dark", dark);
+  themeBtn.textContent = dark ? "☀️" : "🌙";
+}
+applyTheme();
+themeBtn.onclick = () => {
+  localStorage.theme = localStorage.theme === "dark" ? "light" : "dark";
+  applyTheme();
+};
+
+/* ===== Firebase ===== */
 import { initializeApp } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-app.js";
 import {
-  getAuth, onAuthStateChanged,
-  signInWithEmailAndPassword, signOut,
-  createUserWithEmailAndPassword
+  getAuth, signInWithEmailAndPassword,
+  createUserWithEmailAndPassword, signOut,
+  onAuthStateChanged
 } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-auth.js";
 
 import {
-  getFirestore, addDoc, collection, query,
-  orderBy, where, limit, getDocs
+  getFirestore, collection, addDoc,
+  query, where, orderBy, limit, getDocs
 } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-firestore.js";
 
-const firebaseConfig = {
+const app = initializeApp({
   apiKey: "AIzaSyCuTQ4a2znu4NezpilyL2QAyMQHt5SAozE",
   authDomain: "focus3-df69e.firebaseapp.com",
-  projectId: "focus3-df69e",
-  storageBucket: "focus3-df69e.appspot.com",
-  messagingSenderId: "820116608318",
-  appId: "1:820116608318:web:927be143470b2aa885c86f"
-};
+  projectId: "focus3-df69e"
+});
 
-const app = initializeApp(firebaseConfig);
 const auth = getAuth(app);
 const db = getFirestore(app);
 
-/*--------------------------------------------------
-   🌓 Тема — фиксим ошибку
---------------------------------------------------*/
-const themeBtn = document.getElementById("themeBtn");
-
-function applyTheme(){
-    if(localStorage.theme === "dark"){
-        document.body.classList.add("dark");
-        themeBtn.textContent = "☀️";
-    } else {
-        document.body.classList.remove("dark");
-        themeBtn.textContent = "🌙";
-    }
-}
-applyTheme();
-
-themeBtn.onclick = ()=>{
-    localStorage.theme = localStorage.theme === "dark" ? "light" : "dark";
-    applyTheme();
-};
-
-/*--------------------------------------------------
-   UI элементы
---------------------------------------------------*/
-const loginModal = document.getElementById("loginModal");
-const regModal = document.getElementById("regModal");
+/* ===== Элементы ===== */
 const loginBtn = document.getElementById("loginBtn");
 const regBtn = document.getElementById("regBtn");
 const logoutBtn = document.getElementById("logoutBtn");
-const saveBtn = document.getElementById("saveMileage");
 
-document.querySelectorAll(".close").forEach(c=>c.onclick=()=>{
-    document.getElementById(c.dataset.close).classList.remove("show");
+const loginModal = document.getElementById("loginModal");
+const regModal = document.getElementById("regModal");
+
+const loginSubmit = document.getElementById("loginSubmit");
+const regSubmit = document.getElementById("regSubmit");
+
+const statusText = document.getElementById("statusText");
+const saveBtn = document.getElementById("saveMileage");
+const mileage = document.getElementById("mileage");
+const historyBox = document.getElementById("history");
+
+/* ===== Модалки ===== */
+loginBtn.onclick = ()=> loginModal.classList.add("show");
+regBtn.onclick = ()=> regModal.classList.add("show");
+document.querySelectorAll(".close").forEach(btn=>{
+  btn.onclick = ()=> document.getElementById(btn.dataset.close).classList.remove("show");
 });
 
-/*--------------------------------------------------
-   📌 Авторизация
---------------------------------------------------*/
-loginBtn.onclick = ()=>loginModal.classList.add("show");
-regBtn.onclick = ()=>regModal.classList.add("show");
-
-document.getElementById("loginSubmit").onclick = async ()=>{
-    try{
-        await signInWithEmailAndPassword(auth, loginEmail.value, loginPass.value);
-        loginModal.classList.remove("show");
-    } catch(e){ alert(e.message) }
+/* ===== Авторизация ===== */
+loginSubmit.onclick = async ()=>{
+  try {
+    await signInWithEmailAndPassword(auth, loginEmail.value, loginPass.value);
+    loginModal.classList.remove("show");
+  } catch(err){ alert(err.message); }
 };
-
-document.getElementById("regSubmit").onclick = async ()=>{
-    try{
-        await createUserWithEmailAndPassword(auth, regEmail.value, regPass.value);
-        regModal.classList.remove("show");
-    } catch(e){ alert(e.message) }
+regSubmit.onclick = async ()=>{
+  try {
+    await createUserWithEmailAndPassword(auth, regEmail.value, regPass.value);
+    regModal.classList.remove("show");
+  } catch(err){ alert(err.message); }
 };
+logoutBtn.onclick = ()=> signOut(auth);
 
-logoutBtn.onclick = ()=>signOut(auth);
-
-/*--------------------------------------------------
-   🔥 Сохранение пробега
---------------------------------------------------*/
+/* ===== Сохранение пробега ===== */
 saveBtn.onclick = async ()=>{
-    const mileage = +document.getElementById("mileage").value.trim();
-    if(!auth.currentUser) return alert("Сначала войдите!");
-    if(!mileage) return alert("Введите пробег!");
+  if(!auth.currentUser) return alert("Сначала войдите!");
+  const val = Number(mileage.value);
+  if(!val) return alert("Введите пробег!");
 
-    await addDoc(collection(db, "mileages"), {
-        uid: auth.currentUser.uid,
-        mileage: mileage,
-        date: new Date().toISOString()
-    });
+  await addDoc(collection(db,"mileages"),{
+    uid: auth.currentUser.uid,
+    mileage: val,
+    date: new Date().toISOString()
+  });
 
-    // ⚡ отправка на микросервис
-    fetch("http://localhost:3000/analyze",{
-        method:"POST",
-        headers:{ "Content-Type":"application/json" },
-        body: JSON.stringify({ uid: auth.currentUser.uid, mileage })
-    });
+  // отправляем на микросервис
+  fetch("http://localhost:3000/mileage",{
+    method:"POST",
+    headers:{ "Content-Type":"application/json" },
+    body: JSON.stringify({
+      uid: auth.currentUser.uid,
+      mileage: val,
+      email: auth.currentUser.email,
+      date: new Date().toISOString()
+    })
+  });
 
-    loadHistory();
+  mileage.value = "";
+  loadHistory();
 };
 
-/*--------------------------------------------------
-   📌 Вывод последних 5 записей
---------------------------------------------------*/
+/* ===== История последних 5 ===== */
 async function loadHistory(){
-    if(!auth.currentUser) return;
+  const user = auth.currentUser;
+  if(!user) return;
 
-    const q = query(
-        collection(db,"mileages"),
-        where("uid","==",auth.currentUser.uid),
-        orderBy("date","desc"),
-        limit(5)
-    );
-    const snap = await getDocs(q);
-    const h = document.getElementById("history");
-    h.innerHTML = "";
-    snap.forEach(d=>{
-        const v = d.data();
-        h.innerHTML += `• ${v.mileage} км, дата: ${new Date(v.date).toLocaleDateString()}<br>`;
-    });
+  const q = query(
+    collection(db,"mileages"),
+    where("uid","==",user.uid),
+    orderBy("date","desc"),
+    limit(5)
+  );
+  const docs = await getDocs(q);
+
+  historyBox.innerHTML = "";
+  docs.forEach(d=>{
+    const x = d.data();
+    historyBox.innerHTML += `• ${x.mileage} км (${new Date(x.date).toLocaleDateString()})<br>`;
+  });
+
+  historyBox.style.display = docs.size ? "block" : "none";
 }
 
-/*--------------------------------------------------
-   👤 Отслеживание входа
---------------------------------------------------*/
+/* ===== Слежение за входом ===== */
 onAuthStateChanged(auth, user=>{
-    if(user){
-        document.getElementById("userInfo").textContent = `Вы вошли: ${user.email}`;
-        mileage.disabled = false;
-        saveBtn.disabled = false;
-        logoutBtn.style.display = "inline-block";
-        loadHistory();
-    } else {
-        document.getElementById("userInfo").textContent = "Войдите, чтобы сохранять данные";
-        mileage.disabled = true;
-        saveBtn.disabled = true;
-        logoutBtn.style.display = "none";
-        history.innerHTML = "";
-    }
+  if(user){
+    statusText.textContent = `Вы вошли: ${user.email}`;
+    mileage.disabled = false;
+    saveBtn.disabled = false;
+    loginBtn.style.display = "none";
+    regBtn.style.display = "none";
+    logoutBtn.style.display = "inline-block";
+    loadHistory();
+  } else {
+    statusText.textContent = "Войдите, чтобы сохранять данные";
+    mileage.disabled = true;
+    saveBtn.disabled = true;
+    loginBtn.style.display = "inline-block";
+    regBtn.style.display = "inline-block";
+    logoutBtn.style.display = "none";
+    historyBox.innerHTML = "";
+    historyBox.style.display = "none";
+  }
 });
+
 </script>
 </body>
 </html>
